--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.4",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
+    "dotenv": "^16.5.0",
+    "ethers": "^5.8.0",
+    "mongodb": "^6.17.0",
+    "next": "^14.2.30",
     "openai": "^4.46.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.9",
     "typescript": "5.4.5"
   },
   "prettier": {
