--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.22.0",
     "@thirdweb-dev/react": "^4.9.4",
     "@thirdweb-dev/sdk": "^4.0.99",
     "dotenv": "^16.5.0",
     "ethers": "^5.8.0",
     "mongodb": "^6.17.0",
-    "next": "^14.2.30",
+    "next": "^15.3.3",
+    "next-auth": "^4.24.11",
     "openai": "^4.46.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
