--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@thirdweb-dev/sdk": "^4.0.99",
     "dotenv": "^16.5.0",
     "ethers": "^5.8.0",
+    "express": "^4.21.2",
     "mongodb": "^6.17.0",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
