--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.22.0",
     "@thirdweb-dev/react": "^4.9.4",
     "@thirdweb-dev/sdk": "^4.0.99",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ethers": "^5.8.0",
     "express": "^4.21.2",
