Chore: add 'type: module' to support ESLint config

--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "@next/eslint-plugin-next": "^15.3.4",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.29.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.9",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "typescript-eslint": "^8.35.0"
   },
   "prettier": {
     "singleQuote": false
