--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "ethers": "^5.8.0",
     "express": "^4.21.2",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.1",
     "next": "^15.3.3",
-    "openai": "^4.46.0",
+    "openai": "^4.104.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1"
