--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "utils/generateDailyMessage.js"  ],
   "exclude": [
     "node_modules",
     "archive"
