--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.16.1",
     "next": "^15.3.3",
     "openai": "^4.104.0",
+    "puppeteer": "^24.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1"
