--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "next": "^15.3.3",
     "openai": "^4.104.0",
     "puppeteer": "^24.15.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1"
