--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@next/eslint-plugin-next": "^15.3.4",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/stripe": "^8.0.417",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
