--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.6.1",
     "ethers": "^5.8.0",
     "express": "^4.21.2",
+    "firebase": "^12.0.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "nanoid": "^5.1.5",
