--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethers": "^5.8.0",
     "express": "^4.21.2",
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "nanoid": "^5.1.5",
