--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^3.1.0",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/recharts": "^2.0.1",
     "@types/stripe": "^8.0.417",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
