--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@next/eslint-plugin-next": "^15.3.4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -50,8 +51,8 @@
     "@types/stripe": "^8.0.417",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.9",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "5.4.5",
     "typescript-eslint": "^8.35.0"
   },
