--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.2",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
+    "lucide-react": "^0.536.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "nanoid": "^5.1.5",
