--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nanoid": "^5.1.5",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "openai": "^4.104.0",
     "puppeteer": "^24.15.0",
     "puppeteer-extra": "^3.3.6",
