Update TRUSTE manifest for global <all_urls> access and full CAPTCHA-style support

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,22 +1,12 @@
 {
   "manifest_version": 3,
-  "name": "TRUSTE – Authenticity Badges",
-  "version": "0.2.0",
-  "description": "Scores comments/reviews for human authenticity and shows a TRUSTE badge with reasons.",
+  "name": "TRUSTE – Authenticity",
+  "version": "0.3.0",
   "permissions": ["storage", "scripting", "activeTab"],
-  "host_permissions": [
-    "https://nao-sdk-api.onrender.com/*",
-    "https://*.reddit.com/*",
-    "https://*.tiktok.com/*",
-    "https://www.amazon.*/*"
-  ],
+  "host_permissions": ["<all_urls>"],             
   "background": { "service_worker": "service_worker.js" },
   "content_scripts": [{
-    "matches": [
-      "https://www.reddit.com/*",
-      "https://www.tiktok.com/*",
-      "https://www.amazon.*/*"
-    ],
+    "matches": ["<all_urls>"],                     
     "js": ["content.js"],
     "run_at": "document_idle"
   }],
