--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -6,7 +6,7 @@
   "action": { "default_title": "TRUSTE" },
 
   "permissions": ["storage", "alarms", "scripting"],
-  "host_permissions": ["https://*/*", "http://*/*"],
+  "host_permissions": ["https://*/*", "http://*/*", "https://nao-sdk-api.onrender.com/*"],
 
   "background": {
     "service_worker": "service_worker.js",
