--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -19,6 +19,7 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
+      "css": ["badge.css"],
       "run_at": "document_idle",
       "all_frames": true
     }
